# truckfactor

./: CONTRIBUTORS.md  Makefile  README.md  pyproject.toml
artwork/: logos.graffle
tests/: test_truckfactor.py
truckfactor/: __init__.py  compute.py  evo_log_to_csv.py  repair_git_move.py
