[tool.poetry]
name = "truckfactor"
version = "0.1.0"
description = ""
authors = ["HelgeCPH <ropf@itu.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
truckfactor = "truckfactor.compute:run"