[tool.poetry]
name = "truckfactor"
version = "0.2.10"
description = " Tool to compute the truck factor of a Git repository "
authors = ["HelgeCPH <ropf@itu.dk>"]
readme = "README.md"
repository = "https://github.com/HelgeCPH/truckfactor"
documentation = "https://github.com/HelgeCPH/truckfactor/blob/main/README.md"
classifiers = [
    "Development Status :: 4 - Beta", 
    "Environment :: Console", 
    "Intended Audience :: Developers", 
    "Intended Audience :: Education", 
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Programming Language :: Python :: 3", 
    "Topic :: Software Development", 
    "Topic :: Utilities",
]
exclude = ["artwork/"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
pandas = "^1.1.5"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"
python-language-server = {extras = ["yapf"], version = "^0.36.2"}
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
truckfactor = "truckfactor.compute:run"