[tool.poetry]
name = "truckfactor"
version = "0.3.2"
description = " Tool to compute the truck factor of a Git repository "
authors = ["HelgeCPH <ropf@itu.dk>"]
readme = "README.md"
repository = "https://github.com/HelgeCPH/truckfactor"
documentation = "https://github.com/HelgeCPH/truckfactor/blob/main/README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
exclude = ["artwork/"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
ipython = "^8.16.1"
flake8 = "^6.1.0"
black = "^23.9.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
truckfactor = "truckfactor.compute:run"